# VidyutSeva

./: .gitignore  README.md  schema_v2.sql
backend/: .env.example  main.py  migrate.py  pyproject.toml  requirements.txt  seed_admin.py
backend/agents/: __init__.py  diagnosis_agent.py  escalation_agent.py  location_agent.py  orchestrator.py  outage_agent.py
backend/database/: __init__.py  init_db.py  supabase_client.py
backend/qdrant/: __init__.py  vector_store.py
backend/routers/: __init__.py  alerts.py  auth.py  complaints.py  crowd_reports.py  dashboard.py  outages.py  scraper.py
backend/scraper/: __init__.py  bescom_scraper.py  twitter_scraper.py
backend/voice/: __init__.py  vapi_handler.py
frontend/: index.html  package-lock.json  package.json
frontend/dist-test-3/: index.html
frontend/dist-test-3/assets/: index-BC45MhFw.js  index-fJbQV3U5.css
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AdminDashboard.jsx  AlertSubscriptions.jsx  AuthModal.jsx  CallLog.jsx  ChatPage.jsx  ComplaintBoard.jsx  CrowdReports.jsx  DashboardStats.jsx  LiveHeatmap.jsx  OutageForm.jsx  OutageTable.jsx  VapiWidget.jsx
